--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!-- copyright 2014 git.training
+-->
 <head>
 	<title>an example website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
