--- a/simple.html
+++ b/simple.html
@@ -2,7 +2,7 @@
 <!-- copyright 2014 git.training
 -->
 <head>
-	<title>an example website</title>
+	<title>a very respectful website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,11 +16,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			I'm not sure what will go here, but im sure it will be nice.
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Jason Taylor 2014</p>
 	</footer>
 </body>
 </html>
