--- a/simple.html
+++ b/simple.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <!-- copyright 2014 git.training
+	adding changes before rebasing conflicts
 -->
 <head>
 	<title>a very respectful website</title>
