fb adding some trouble to simple

--- a/simple.html
+++ b/simple.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <!-- copyright 2014 git.training
-	some silly changes from aster branch
+	adding changes before rebasing conflicts
 -->
 <head>
-	<title>Silly changes</title>
+	<title>a very respectful website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -15,9 +15,8 @@
 </head>
 <body>
 	<main class="container">
-	<!-- junk filler content -->
 		<p>
-			Just stuff for now
+			Just nothing but trouble.
 		</p>
 	</main>
 	<footer class="container">
