--- a/simple.html
+++ b/simple.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <!-- copyright 2014 git.training
-	adding changes before rebasing conflicts
+	some silly changes from aster branch
 -->
 <head>
-	<title>a very respectful website</title>
+	<title>Silly changes</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -15,13 +15,13 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- junk filler content -->
 		<p>
-			Just some content
+			Just stuff for now
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Git Training 2014</p>
+		<p>&copy; Git Francis Cho 2014</p>
 	</footer>
 </body>
 </html>
