--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	adding changes before rebasing conflicts
 -->
 <head>
-	<title>a very respectful website</title>
+	<title>Lots of Trouble, in a little repo</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
