--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	adding changes before rebasing conflicts
 -->
 <head>
-	<title>Lots of Trouble, in a little repo</title>
+	<title>Updating Title for stash example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,7 +16,7 @@
 <body>
 	<main class="container">
 		<p>
-			Just nothing but trouble.
+			adding more important content here.
 		</p>
 	</main>
 	<footer class="container">
