changes after git-stash-branch command

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	adding changes before rebasing conflicts
 -->
 <head>
-	<title>Updating Title for stash example</title>
+	<title>Updating Title for stash branch example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
